--- a/crates/primitives/Cargo.toml
+++ b/crates/primitives/Cargo.toml
@@ -13,15 +13,16 @@ readme = "../../README.md"
 bytes = { version = "1.4", default-features = false }
 hashbrown = { version = "0.13" }
 hex = { version = "0.4", default-features = false }
-primitive-types = { version = "0.12", default-features = false }
-rlp = { version = "0.5", default-features = false } # used for create2 address calculation
+primitive-types = { git = "https://github.com/core-coin/core-common.git", default-features = false }
+rlp = { git = "https://github.com/core-coin/core-common.git", default-features = false } # used for create2 address calculation
 ruint = { version = "1.8.0", features = ["primitive-types", "rlp"] }
 auto_impl = "1.0"
 bitvec = { version = "1", default-features = false, features = ["alloc"] }
 
 # bits B256 B176 crate
-fixed-hash = { version = "0.8", default-features = false, features = [
+fixed-hash = { git = "https://github.com/core-coin/core-common.git", default-features = false, features = [
     "rustc-hex",
+    "rand",
 ] }
 
 #utility
