--- a/crates/revm/Cargo.toml
+++ b/crates/revm/Cargo.toml
@@ -31,15 +31,15 @@ dev = [
     "optional_balance_check",
     "optional_block_energy_limit",
     "optional_eip3607",
-    "optional_gas_refund",
+    "optional_energy_refund",
 ]
 secp256k1 = ["revm-precompile/secp256k1"]
 memory_limit = ["revm-interpreter/memory_limit"]
-no_gas_measuring = ["revm-interpreter/no_gas_measuring"]
+no_energy_measuring = ["revm-interpreter/no_energy_measuring"]
 optional_balance_check = ["revm-interpreter/optional_balance_check"]
 optional_block_energy_limit = ["revm-interpreter/optional_block_energy_limit"]
 optional_eip3607 = ["revm-interpreter/optional_eip3607"]
-optional_gas_refund = ["revm-interpreter/optional_gas_refund"]
+optional_energy_refund = ["revm-interpreter/optional_energy_refund"]
 std = ["revm-interpreter/std"]
 serde = ["dep:serde","dep:serde_json", "revm-interpreter/serde"]
 # deprecated feature
