--- a/crates/precompile/Cargo.toml
+++ b/crates/precompile/Cargo.toml
@@ -18,6 +18,8 @@ ripemd = { version = "0.1", default-features = false }
 secp256k1 = { version = "0.27.0", default-features = false, features = ["alloc", "recovery"], optional = true }
 sha2 = { version = "0.10.5", default-features = false }
 sha3 = { version = "0.10.8", default-features = false }
+libgoldilocks = { git = "https://github.com/core-coin/ed448-rs", branch = "david/add_try_from_for_signature" }
+
 
 [dev-dependencies]
 hex = "0.4"
