--- a/bins/revme/Cargo.toml
+++ b/bins/revme/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 authors = ["Dragan Rakita <dragan0rakita@gmail.com>"]
 edition = "2021"
-name = "revme"
-keywords = ["ethereum", "evm"]
+name = "cvme"
+keywords = ["ethereum", "cvm"]
 license = "MIT"
-repository = "https://github.com/bluealloy/revm"
+repository = "https://github.com/bluealloy/cvm"
 description = "Rust Ethereum Virtual Machine Executable"
 version = "0.2.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -17,7 +17,7 @@ hex = "0.4"
 indicatif = "0.17"
 plain_hasher = "0.2"
 primitive-types = { version = "0.12", features = ["rlp", "serde"] }
-revm = { path = "../../crates/revm", version = "3.0.0", default-features = false, features = [
+cvm = { path = "../../crates/cvm", version = "3.0.0", default-features = false, features = [
     "std",
     "secp256k1",
     "serde",
