--- a/crates/precompile/Cargo.toml
+++ b/crates/precompile/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
 authors = ["Dragan Rakita <dragan0rakita@gmail.com>"]
-description = "REVM Precompiles - Ethereum compatible precompiled contracts"
+description = "CVM Precompiles - Core compatible precompiled contracts"
 edition = "2021"
-keywords = ["ethereum", "evm", "revm", "precompiles"]
+keywords = ["ethereum", "cvm", "precompiles"]
 license = "MIT"
-name = "revm-precompile"
-repository = "https://github.com/bluealloy/revm"
+name = "cvm-precompile"
+repository = "https://github.com/core-coin/cvm"
 version = "2.0.0"
 
 [dependencies]
-revm-primitives = { path = "../primitives", version = "1.0.0" }
+cvm-primitives = { path = "../primitives", version = "1.0.0" }
 bn = { package = "substrate-bn", version = "0.6", default-features = false }
 k256 = { version = "0.11", default-features = false, features = ["ecdsa", "keccak256"] }
 num = { version = "0.4.0", default-features = false, features = ["alloc"] }
